Fixed header on mobile and added a to top function when scrolling past a certain point.

--- a/src/components/PokedexHeader/PokedexHeader.css
+++ b/src/components/PokedexHeader/PokedexHeader.css
@@ -53,7 +53,7 @@ header.smaller h1#logo {
 
 	header {
 		width: 100%;
-		height: 12em;
+		height: 7em;
 		overflow: hidden;
 		position: fixed;
 		top: 0;
@@ -81,7 +81,7 @@ header.smaller h1#logo {
 	}
 
 	header.smaller {
-		height: 12em;
+		height: 4em;
 	}
 
 }
@@ -91,7 +91,7 @@ header.smaller h1#logo {
 
 	header {
 		width: 100%;
-		height: 200px;
+		height: 120px;
 		overflow: hidden;
 		position: fixed;
 		top: 0;
@@ -103,7 +103,7 @@ header.smaller h1#logo {
 	
 	header h1#logo {
 		display: inline-block;
-		line-height:3em;
+		line-height:1em;
 	   margin: 0;
 	   padding:0 1em;
 		float: left;
@@ -119,7 +119,7 @@ header.smaller h1#logo {
 	}
 
 	header.smaller {
-		height: 200px;
+		height: 120px;
 	}
 
 }
